reset year
